@@ -82,6 +82,7 @@ dox_inputs = $(DOX_CONFIG) \
        $(hwloc_include_dir)/hwloc/cudart.h \
        $(hwloc_include_dir)/hwloc/nvml.h \
        $(hwloc_include_dir)/hwloc/rsmi.h \
+       $(hwloc_include_dir)/hwloc/levelzero.h \
        $(hwloc_include_dir)/hwloc/gl.h \
        $(hwloc_include_dir)/hwloc/windows.h \
        $(hwloc_include_dir)/hwloc/openfabrics-verbs.h \
@@ -765,6 +766,9 @@ man3_gpu_DATA = \
         $(DOX_MAN_DIR)/man3/hwloc_rsmi_get_device_cpuset.3 \
         $(DOX_MAN_DIR)/man3/hwloc_rsmi_get_device_osdev.3 \
         $(DOX_MAN_DIR)/man3/hwloc_rsmi_get_device_osdev_by_index.3 \
+        $(DOX_MAN_DIR)/man3/hwlocality_levelzero.3 \
+        $(DOX_MAN_DIR)/man3/hwloc_levelzero_get_device_cpuset.3 \
+        $(DOX_MAN_DIR)/man3/hwloc_levelzero_get_device_osdev.3 \
         $(DOX_MAN_DIR)/man3/hwlocality_gl.3 \
         $(DOX_MAN_DIR)/man3/hwloc_gl_get_display_osdev_by_port_device.3 \
         $(DOX_MAN_DIR)/man3/hwloc_gl_get_display_osdev_by_name.3 \
