@@ -26,6 +26,7 @@ INPUT          = \
 		@top_srcdir@/include/hwloc/cudart.h \
 		@top_srcdir@/include/hwloc/nvml.h \
 		@top_srcdir@/include/hwloc/rsmi.h \
+		@top_srcdir@/include/hwloc/levelzero.h \
 		@top_srcdir@/include/hwloc/gl.h \
 		@top_srcdir@/include/hwloc/openfabrics-verbs.h \
 		@top_srcdir@/include/hwloc/diff.h \
