@@ -31,6 +31,7 @@ include_hwloc_HEADERS = \
         hwloc/cudart.h \
         hwloc/nvml.h \
         hwloc/rsmi.h \
+        hwloc/levelzero.h \
         hwloc/plugins.h \
         hwloc/gl.h \
         hwloc/rename.h \
