@@ -33,6 +33,9 @@ endif HWLOC_HAVE_NVML
 if HWLOC_HAVE_RSMI
 TEST_CPPFLAGS += -DHWLOC_TEST_RENAME_RSMI=1
 endif HWLOC_HAVE_RSMI
+if HWLOC_HAVE_LEVELZERO
+TEST_CPPFLAGS += -DHWLOC_TEST_RENAME_LEVELZERO=1
+endif HWLOC_HAVE_LEVELZERO
 
 dirs:
 	mkdir -p include/hwloc/autogen include/private/autogen
